[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "probt"
version = "1.0.0"
description = "ProBT Python bindings (binary distribution)"
requires-python = ">=3.9"
dependencies = [
    "numpy==1.26.4",
    "pandas==2.3.3"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
probt = ["*.so*", "*.dll", "*.jar", "*.txt", "*.py"]

