[metadata]
name = probt
version = 1.0.0
description = ProBT Python bindings (binary distribution)

[options]
python_requires = >=3.6, <3.7
package_dir =
    = src
packages = find:
include_package_data = True
zip_safe = False
install_requires =
    numpy==1.19.5
    pandas==1.1.5

[options.packages.find]
where = src

[options.package_data]
probt = *.so*,*.dll,*.jar,*.txt,*.py
